--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -1,147 +1,164 @@
 <div class="profile-banner" style="background-image: url('../../../../assets/images/user-banner1.jpg');">
-  <div class="col-sm-3 avatar-container">
-    <img [src]="profileSmImage" class="twPc-avatarImg img-circle profile-avatar"
-         *ngIf="!isImageLoading" alt="User avatar">
-  </div>
+    <div class="col-sm-3 avatar-container">
+        <img [src]="profileSmImage" class="twPc-avatarImg img-circle profile-avatar"
+             *ngIf="!isImageLoading" alt="User avatar">
+    </div>
 </div>
 <div class="content">
 
-  <div class="row">
-    <div class="col-sm-3">
-      <!-- Begin user profile -->
-      <div class="text-center user-profile-2" style="margin-top:120px">
-        <ul class="list-group">
-          <li class="list-group-item">
-            <h4><b>{{firstName}} {{lastName}} </b></h4>
-            <!--<h5>Administrator</h5>-->
-          </li>
-          <li class="list-group-item pointer" (click)="Followers()" [ngClass]="{ 'active': folowers, 'in-active': !folowers}">
+    <div class="row">
+        <div class="col-sm-3">
+            <!-- Begin user profile -->
+            <div class="text-center user-profile-2" style="margin-top:120px">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <h4><b>{{firstName}} {{lastName}} </b></h4>
+                        <!--<h5>Administrator</h5>-->
+                    </li>
+                    <li class="list-group-item pointer" (click)="Followers()"
+                        [ngClass]="{ 'active': folowers, 'in-active': !folowers}">
             <span class="badge pointer" [class]="followCntrlCSS" (click)="followEntity()">
               {{followersCount}} Followers
             </span>
-          </li>
-          <li class="list-group-item pointer" (click)="FollowingCount()" [ngClass]="{ 'active': folow, 'in-active': !folow}">
-            <span class="badge">245</span>
-            <span class="">Following</span>
-          </li>
-          <li class="list-group-item pointer" (click)="isProfileCollapsed=true; isActivityCollapsed=false;" (click)="Activities()" [ngClass]="{ 'active': activitiesData, 'in-active': !activitiesData}">
-            <span class="pointer">Activities</span>
-          </li>
+                    </li>
+                    <li class="list-group-item pointer" (click)="FollowingCount()"
+                        [ngClass]="{ 'active': folow, 'in-active': !folow}">
+                        <span class="badge">245</span>
+                        <span class="">Following</span>
+                    </li>
+                    <li class="list-group-item pointer" (click)="isProfileCollapsed=true; isActivityCollapsed=false;"
+                        (click)="Activities()" [ngClass]="{ 'active': activitiesData, 'in-active': !activitiesData}">
+                        <span class="pointer">Activities</span>
+                    </li>
 
-          <li class="list-group-item pointer" (click)="isProfileCollapsed=false; isActivityCollapsed=true;" (click)="Profiles()" [ngClass]="{ 'active': profileData, 'in-active': !profileData}">
-            <span class="pointer">Profile</span>
-          </li>
-        </ul>
+                    <li class="list-group-item pointer" (click)="isProfileCollapsed=false; isActivityCollapsed=true;"
+                        (click)="Profiles()" [ngClass]="{ 'active': profileData, 'in-active': !profileData}">
+                        <span class="pointer">Profile</span>
+                    </li>
+                </ul>
 
-      </div><!-- End div .box-info -->
-      <!-- Begin user profile -->
-    </div><!-- End div .col-sm-4 -->
+            </div><!-- End div .box-info -->
+            <!-- Begin user profile -->
+        </div><!-- End div .col-sm-4 -->
 
-    <div class="col-sm-9">
-      <div class="widget widget-tabbed">
-        <!-- Nav tab -->
+        <div class="col-sm-9">
+            <div class="widget widget-tabbed">
+                <!-- Nav tab -->
 
-        <div class="gap gray-bg">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="row cols-reverse" id="page-contents">
-                  <!-- sidebar -->
-                  <!-- Main stage area -->
-                  <div class="col-lg-12 cols-item2">
-                    <div id="ActivityCollapse" [ngbCollapse]="isActivityCollapsed">
-                      <app-post [type]="user" [userId]="admin1" [disableNewPost]=true></app-post>
-                    </div>
-                    <div id="FollowersCollapse" [ngbCollapse]="isFollowersCollapsed" class="widget stick-widget">
-                      <h4 class="widget-title">Followers</h4>
-                      <ul class="followers">
-                        <li *ngFor="let followingUser of followers">
-                        <app-usercard1 [user]=followingUser></app-usercard1>
-                        </li>
-                    </ul>                        </div>
-                    <div id="ProfileCollapse" [ngbCollapse]="isProfileCollapsed">
-                      <div class="card card-nav-tabs">
-                        <div class="card-header-1 card-header-primary">
-                          <div class="nav-tabs-navigation">
-                            <div class="nav-tabs-wrapper">
-                              <ul class="nav nav-tabs justify-content-center nav-pills nav-pills nav-fill"
-                                  data-tabs="tabs">
+                <div class="gap gray-bg">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="row cols-reverse" id="page-contents">
+                                    <!-- sidebar -->
+                                    <!-- Main stage area -->
+                                    <div class="col-lg-12 cols-item2">
+                                        <div id="ActivityCollapse" [ngbCollapse]="isActivityCollapsed">
+                                            <app-post [type]="user" [userId]="admin1" [disableNewPost]=true></app-post>
+                                        </div>
+                                        <div id="FollowersCollapse" [ngbCollapse]="isFollowersCollapsed"
+                                             class="widget stick-widget">
+                                            <h4 class="widget-title">Followers</h4>
+                                            <ul class="followers">
+                                                <li *ngFor="let followingUser of followers">
+                                                    <app-usercard1 [user]=followingUser></app-usercard1>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div id="ProfileCollapse" [ngbCollapse]="isProfileCollapsed">
+                                            <div class="card card-nav-tabs">
+                                                <div class="card-header-1 card-header-primary">
+                                                    <div class="nav-tabs-navigation">
+                                                        <div class="nav-tabs-wrapper">
+                                                            <ul class="nav nav-tabs justify-content-center nav-pills nav-pills nav-fill"
+                                                                data-tabs="tabs">
 
-                                <li class="nav-item" *ngFor="let profileTemplate of profilesTemplates" >
+                                                                <li class="nav-item"
+                                                                    *ngFor="let profileTemplate of profilesTemplates">
 
 
+                                                                    <a class="nav-link text-black-50" data-toggle="tab"
+                                                                       [routerLink]=""
+                                                                       (click)="loadTemplate(profileTemplate.profileTemplateId)"
+                                                                       *ngIf="profileTemplate.profileTemplateId">
+                                                                        <i class="material-icons">{{profileTemplate.profileIcon}}</i>
+                                                                        {{profileTemplate.name}}
+                                                                        <!--{{profileTemplate.profileTemplateId}}-->
+                                                                    </a>
 
+                                                                </li>
+                                                                <li *ngIf="isProfileEditable()" class="nav-item">
+                                                                    <div ngbDropdown class="d-inline-block">
+                                                                        <button class="btn btn-outline-primary"
+                                                                                id="dropdownAddSection"
+                                                                                ngbDropdownToggle>
+                                                                            Add Section
+                                                                        </button>
+                                                                        <div ngbDropdownMenu
+                                                                             aria-labelledby="dropdownAddSection">
+                                                                            <button class="dropdown-item"
+                                                                                    *ngFor="let profileTemplate of profilesTemplates"
+                                                                                    (click)="loadTemplate(profileTemplate.profileTemplateId)">
+                                                                                {{profileTemplate.name}}
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                </li>
+                                                                <li *ngIf="isUserLogged()" class="nav-item">
+                                                                    <div>
+                                                                        <button type="button" class="btn btn-primary"
+                                                                                (click)="editProfile()">{{editLabel}}
+                                                                        </button>
+                                                                        <button type="button"
+                                                                                *ngIf="isProfileEditable()"
+                                                                                class="btn btn-primary"
+                                                                                (click)="cancelEditProfile()">Cancel
+                                                                            Edit
+                                                                        </button>
+                                                                    </div>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div>
 
-                                  <a class="nav-link text-black-50" data-toggle="tab" [routerLink]=""
-                                     (click)="loadTemplate(profileTemplate.profileTemplateId)" *ngIf="profileTemplate.profileTemplateId">
-                                    <i class="material-icons">{{profileTemplate.profileIcon}}</i>
-                                    {{profileTemplate.name}}
-                                    <!--{{profileTemplate.profileTemplateId}}-->
-                                  </a>
-
-                                </li>
-                                <li *ngIf="isProfileEditable()" class="nav-item">
-                                  <div ngbDropdown class="d-inline-block">
-                                    <button class="btn btn-outline-primary" id="dropdownAddSection" ngbDropdownToggle>
-                                      Add Section
-                                    </button>
-                                    <div ngbDropdownMenu aria-labelledby="dropdownAddSection">
-                                      <button class="dropdown-item" *ngFor="let profileTemplate of profilesTemplates"
-                                              (click)="loadTemplate(profileTemplate.profileTemplateId)">{{profileTemplate.name}}</button>
-                                    </div>
-                                  </div>
-                                </li>
-                                <li *ngIf="isUserLogged()" class="nav-item">
-                                  <div>
-                                    <button type="button" class="btn btn-primary"
-                                            (click)="editProfile()">{{editLabel}}</button>
-                                    <button type="button" *ngIf="isProfileEditable()" class="btn btn-primary"
-                                            (click)="cancelEditProfile()">Cancel Edit
-                                    </button>
-                                  </div>
-                                </li>
-                              </ul>
+                                                <div class="card-body ">
+                                                    <div class="tab-content text-center">
+                                                        <div class="tab-pane active" id="templateType">
+                                                            <app-usertemplate [type]="templateType"></app-usertemplate>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!--HORIZONTAL ITEMS FOR PROFILES / ADD SECTION IN EDIT MODE-->
+                                        </div>
+                                    </div><!-- centerl meta -->
+                                </div>
                             </div>
-                          </div>
                         </div>
-
-                        <div class="card-body ">
-                          <div class="tab-content text-center">
-                            <div class="tab-pane active" id="templateType">
-                              <app-usertemplate [type]="templateType"></app-usertemplate>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <!--HORIZONTAL ITEMS FOR PROFILES / ADD SECTION IN EDIT MODE-->
                     </div>
-                  </div><!-- centerl meta -->
                 </div>
-              </div>
-            </div>
-          </div>
+
+                <!-- End nav tab -->
+
+                <!-- Tab panes -->
+                <div class="tab-content">
+
+
+                    <!-- Tab timeline -->
+                    <div class="tab-pane animated active fadeInRight" id="my-timeline">
+                        <div class="user-profile-content">
+
+                            <!-- Begin timeline -->
+
+                            <!-- End timeline -->
+                        </div><!-- End div .user-profile-content -->
+                    </div><!-- End div .tab-pane -->
+                    <!-- End Tab timeline -->
+                    <!-- Tab about -->
+                    <!-- End Tab user messages -->
+                </div><!-- End div .tab-content -->
+            </div><!-- End div .box-info -->
         </div>
-
-        <!-- End nav tab -->
-
-        <!-- Tab panes -->
-        <div class="tab-content">
-
-
-          <!-- Tab timeline -->
-          <div class="tab-pane animated active fadeInRight" id="my-timeline">
-            <div class="user-profile-content">
-
-              <!-- Begin timeline -->
-
-              <!-- End timeline -->
-            </div><!-- End div .user-profile-content -->
-          </div><!-- End div .tab-pane -->
-          <!-- End Tab timeline -->
-          <!-- Tab about -->
-          <!-- End Tab user messages -->
-        </div><!-- End div .tab-content -->
-      </div><!-- End div .box-info -->
     </div>
-  </div>
 </div>
